# MemicOS

./: CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yaml  package-lock.json  package.json
.cursor/: rules
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: autointerp-tests.yml  codecov.yml  semantic-versioning-release.yml  webapp-playwright.yml
apps/autointerp/: Dockerfile  Makefile  README.md  pyproject.toml  server.py
apps/autointerp/memicos_autointerp/: utils.py
apps/autointerp/memicos_autointerp/routes/explain/: default.py
apps/autointerp/memicos_autointerp/routes/score/: embedding.py  fuzz_detection.py
apps/autointerp/tests/unit/: test_utils.py
apps/experiments/steerify/: README.md  next.config.js
apps/inference/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  start.py  supervisord.conf
apps/inference/dev/: manual_test_activations.ipynb
apps/inference/k8s/: README.md
apps/inference/memicos_inference/: args.py  config.py  logging.py  sae_manager.py  server.py  testing.ipynb
apps/inference/tests/: conftest.py
apps/webapp/: .env.demo  .env.localhost  README.md  next.config.js  package-lock.json  package.json
apps/webapp/app/: footer.tsx  layout.tsx  page.tsx  sitemap.ts
apps/webapp/components/: edit-profile-form-autointerp-key-field.tsx  edit-profile-form.tsx  explanations-searcher.tsx
apps/webapp/lib/: env.ts  swagger.ts  with-user.ts
apps/webapp/lib/db/: user.ts  (+3 more)
apps/webapp/prisma/: schema.prisma
apps/webapp/public/: rate-limited.html  swagger.json
schemas/: Makefile  README.md  generate-types.py  pyproject.toml
schemas/openapi/: autointerp-server.yaml  inference-server.yaml  shared.yaml
utils/memicos-utils/: .gitignore  README.md  pyproject.toml
utils/memicos-utils/memicos_utils/: .env.example  batch-autointerp.py  convert-saedashboard-to-memicos-export.py  export-data.py  generate-dashboards-as-saelens.py  generate-dashboards-as-vectors.py
(+108 files in other folders)
