[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memicos_autointerp"
version = "1.0.0"
description = "MemicOS's AutoInterp Server - Based on EleutherAI's sae-auto-interp. Not using Poetry due to issue with xformers library."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["interpretability", "explainable-ai"]
authors = [
    {name = "Johnny Lin", email = "johnny@memicos.org"},
]
dependencies = [
    "sae-auto-interp@git+https://github.com/hijohnnylin/sae-auto-interp",
    "fastapi",
    "pydantic",
    "uvicorn",
    "sentry-sdk[fastapi]",
    "python-dotenv",
    "memicos-autointerp-client"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.1",
    "coverage>=7.6.0",
    "ruff>=0.7.4",
]

[tool.setuptools.packages.find]
include = ["memicos_autointerp*"]

[tool.ruff.lint]
exclude = ["*.ipynb"]
ignore = ["E203", "E501", "E731", "F722", "E741", "F821", "F403", "ARG002"]
select = ["UP", "TID", "I", "F", "E", "ARG", "SIM", "RET", "LOG", "T20"]
